crates/valen-parser/tests/snapshots/parser__class_with_ctor_params.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class User(pub name: String, mut age: Int) {}\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            annotations: [],
            visibility: Internal,
            kind: Final,
            name: "User",
            generics: [],
            ctor_params: [
                CtorParam {
                    annotations: [],
                    visibility: Pub,
                    name: "name",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "String",
                                    generics: [],
                                    span: Span {
                                        start: 21,
                                        end: 27,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 21,
                                end: 27,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: None,
                    span: Span {
                        start: 11,
                        end: 27,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
                CtorParam {
                    annotations: [],
                    visibility: Internal,
                    name: "age",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 38,
                                        end: 41,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 38,
                                end: 41,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: true,
                    default: None,
                    span: Span {
                        start: 29,
                        end: 41,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            supertypes: [],
            body: [],
            span: Span {
                start: 0,
                end: 45,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
