crates/valen-parser/tests/snapshots/parser__class_with_methods.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class Dog(pub name: String) { fn greet(self) -> String { self.name } }\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            visibility: Internal,
            kind: Final,
            name: "Dog",
            generics: [],
            ctor_params: [
                CtorParam {
                    visibility: Pub,
                    name: "name",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "String",
                                    generics: [],
                                    span: Span {
                                        start: 20,
                                        end: 26,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 26,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    span: Span {
                        start: 10,
                        end: 26,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            supertypes: [],
            body: [
                Method(
                    FnDecl {
                        visibility: Internal,
                        name: "greet",
                        generics: [],
                        params: [
                            Param {
                                name: "self",
                                ty: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: "Self",
                                                generics: [],
                                                span: Span {
                                                    start: 39,
                                                    end: 43,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 39,
                                            end: 43,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                mutable: false,
                                span: Span {
                                    start: 39,
                                    end: 43,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        return_type: Some(
                            Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: "String",
                                            generics: [],
                                            span: Span {
                                                start: 48,
                                                end: 54,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 48,
                                        end: 54,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                        body: Some(
                            Block {
                                stmts: [],
                                tail: Some(
                                    Field(
                                        FieldAccess {
                                            receiver: Path(
                                                Path {
                                                    segments: [
                                                        PathSegment {
                                                            name: "self",
                                                            turbofish: false,
                                                            generics: [],
                                                            span: Span {
                                                                start: 57,
                                                                end: 61,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 57,
                                                        end: 61,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                            field: "name",
                                            span: Span {
                                                start: 57,
                                                end: 66,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                ),
                                span: Span {
                                    start: 55,
                                    end: 68,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                        is_open: false,
                        is_override: false,
                        is_abstract: false,
                        span: Span {
                            start: 30,
                            end: 68,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 70,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
