crates/valen-parser/tests/snapshots/parser__class_with_superclass.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class Dog(pub name: String) : Animal {}\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            annotations: [],
            visibility: Internal,
            kind: Final,
            name: "Dog",
            generics: [],
            ctor_params: [
                CtorParam {
                    annotations: [],
                    visibility: Pub,
                    name: "name",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "String",
                                    generics: [],
                                    span: Span {
                                        start: 20,
                                        end: 26,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 26,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: None,
                    span: Span {
                        start: 10,
                        end: 26,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            supertypes: [
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Animal",
                                generics: [],
                                span: Span {
                                    start: 30,
                                    end: 36,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 30,
                            end: 36,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            derives: [],
            body: [],
            span: Span {
                start: 0,
                end: 39,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
