crates/valen-parser/tests/snapshots/parser__comparison_and_logical_chain.snap
---
source: crates/valen-parser/tests/parser.rs
assertion_line: 62
expression: "check(\"fn main() { a < b && b < c || d == e }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "main",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Binary(
                            BinaryExpr {
                                op: Or,
                                lhs: Binary(
                                    BinaryExpr {
                                        op: And,
                                        lhs: Binary(
                                            BinaryExpr {
                                                op: Lt,
                                                lhs: Path(
                                                    Path {
                                                        segments: [
                                                            PathSegment {
                                                                name: "a",
                                                                double_colon: false,
                                                                generics: [],
                                                                span: Span {
                                                                    start: 12,
                                                                    end: 13,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 12,
                                                            end: 13,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                rhs: Path(
                                                    Path {
                                                        segments: [
                                                            PathSegment {
                                                                name: "b",
                                                                double_colon: false,
                                                                generics: [],
                                                                span: Span {
                                                                    start: 16,
                                                                    end: 17,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 16,
                                                            end: 17,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 12,
                                                    end: 17,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        rhs: Binary(
                                            BinaryExpr {
                                                op: Lt,
                                                lhs: Path(
                                                    Path {
                                                        segments: [
                                                            PathSegment {
                                                                name: "b",
                                                                double_colon: false,
                                                                generics: [],
                                                                span: Span {
                                                                    start: 21,
                                                                    end: 22,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 21,
                                                            end: 22,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                rhs: Path(
                                                    Path {
                                                        segments: [
                                                            PathSegment {
                                                                name: "c",
                                                                double_colon: false,
                                                                generics: [],
                                                                span: Span {
                                                                    start: 25,
                                                                    end: 26,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 25,
                                                            end: 26,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 21,
                                                    end: 26,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 12,
                                            end: 26,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                rhs: Binary(
                                    BinaryExpr {
                                        op: Eq,
                                        lhs: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "d",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 30,
                                                            end: 31,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 30,
                                                    end: 31,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        rhs: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "e",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 35,
                                                            end: 36,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 30,
                                            end: 36,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 12,
                                    end: 36,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 10,
                        end: 38,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 38,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
